<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/bottomSheetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/muze_plan_ekle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="8dp"/>

    <EditText
        android:id="@+id/museumName"
        android:layout_width="match_parent"
        android:background="@drawable/category_selector_bg"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/muze_ad"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/museumVisitDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/category_selector_bg"
        android:inputType="date"
        android:hint="@string/ziyaret_gun"
        android:layout_marginTop="8dp"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/museumVisitTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/category_selector_bg"
        android:inputType="time"
        android:hint="Ziyaret Saati (HH:MM)"
        android:layout_marginTop="8dp"
        android:padding="8dp"/>


    <EditText
        android:id="@+id/museumOpenCloseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/category_selector_bg"
        android:inputType="time"
        android:hint="@string/acilis_kapanis_saati_hh_mm"
        android:layout_marginTop="8dp"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iptal"
            android:padding="8dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/textColor"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kaydet"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/primaryColor"/>


    </LinearLayout>

</LinearLayout>