<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragment.NearbyPlacesFragment">


    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/currentLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Istanbul, Turkiye"
        android:textSize="16sp"
        android:textColor="#333333"
        android:drawableStart="@drawable/location"
        android:drawablePadding="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <HorizontalScrollView
        android:id="@+id/categoryScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/currentLocationText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/categoryContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkboxHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel"
                android:textSize="14sp"
                android:padding="8dp"/>
            <CheckBox
                android:id="@+id/checkboxRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                android:padding="8dp"/>
            <CheckBox
                android:id="@+id/checkboxMuseum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muze"
                android:textSize="14sp"
                android:padding="8dp"/>
            <CheckBox
                android:id="@+id/checkboxTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toplu_tasima"
                android:textSize="14sp"
                android:padding="8dp"/>
            <CheckBox
                android:id="@+id/checkboxRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kiralik_arac"
                android:textSize="14sp"
                android:padding="8dp"/>
        </LinearLayout>
    </HorizontalScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFetchPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listele"
        android:textColor="#ffffff"
        android:background="@drawable/category_button_bg"
        app:layout_constraintTop_toBottomOf="@id/categoryScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnFetchPlaces"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lütfen bir kategori seçiniz."
        android:textColor="#666666"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnFetchPlaces"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nearbyRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnFetchPlaces"
        app:layout_constraintBottom_toTopOf="@id/btnLoadMore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoadMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daha_fazla_goster"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/category_button_bg"
        app:layout_constraintTop_toBottomOf="@id/nearbyRecyclerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>