<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bottomsheet_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    tools:context=".bottomsheet.ClearDataBottomSheet"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/confirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tum_verileri_silmek_stediginize_emin_misiniz"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:paddingBottom="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:textColor="@color/softWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/evet"
            android:background="@drawable/yes_button_bg"
            />
        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/textColor"
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hay_r"
            android:background="@drawable/no_button_bg"/>

    </LinearLayout>


</LinearLayout>